--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 beautifulsoup4==4.11.1
 bs4==0.0.1
+numpy==1.24.1
+pandas==1.5.2
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.7.1
 selenium==3.141.0
+six==1.16.0
 soupsieve==2.3.2.post1
 urllib3==1.26.11
