--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,16 @@
 *__pycache__
 chromedriver
 .env
-error.txt
 notes.txt
 f4f_venv
 *results*.txt
 *results*.csv
+recordings
+pickles
+status.log
+
+error.txt
+
+checker2.py
+csvdata.csv
+unfollowlist.txt
